# isaac-xml-validator

./: .env.example  .gitignore  LICENCE.md  README.md  isaacTypes.xsd  isaac_xml_validator.py  main.py  publish.sh  pyproject.toml
isaacxmlvalidatorpipy/: __init__.py
python/: README.md
webtool/: index.html
webtool/css/: material.css  style.css
webtool/js/: script.js
webtool/js/libs/: match-highlighter.js
xsd/: achievements.xsd  ambush.xsd  babies.xsd  backdrops.xsd  bombcostumes.xsd  bosscolors.xsd  bossoverlays.xsd  bosspools.xsd  bossportraits.xsd  challenges.xsd  costumes2.xsd  curses.xsd  cutscenes.xsd  datatypes.xsd  entities2.xsd  fxlayers.xsd  giantbook.xsd  info_display.xsd  isaacTypes.xsd  itempools.xsd  items.xsd  items_metadata.xsd  locusts.xsd  metadata.xsd  minibosses.xsd  music.xsd  nightmares.xsd  playerforms.xsd  players.xsd  pocketitems.xsd  preload.xsd  recipes.xsd  shaders.xsd  sounds.xsd  stages.xsd  wisps.xsd
