[tool.poetry]
name = "isaac-xml-validator"
version = "1.1.1"
description = "A script to validate XML files for the game 'The Binding of Isaac: Rebirth'"
authors = ["Wofsauge <jan-.-@t-online.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
isaac-xml-validator = 'isaac_xml_validator:main'

[project.urls]
"Homepage" = "https://github.com/wofsauge/isaac-xml-validator"
"Bug Tracker" = "https://github.com/wofsauge/isaac-xml-validator/issues"
