[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "isaac-xml-validator"
version = "1.6.8"
description = "A script to validate XML files for the game 'The Binding of Isaac: Repentance'"
authors = [
    {name = "Wofsauge", email = "jan-.-@t-online.de"},
]
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "lxml",
    "importlib-metadata",
]
requires-python = ">=3.6"
[tool.setuptools]
py-modules = ["isaac_xml_validator"]

[tool.setuptools.packages.find]
where = [""]

[tool.setuptools.package-data]
"*" = ["*.xsd"]

[project.urls]
"Homepage" = "https://github.com/wofsauge/isaac-xml-validator"
"Bug Tracker" = "https://github.com/wofsauge/isaac-xml-validator/issues"
